docs: .mvn/jvm.config 파일 예시 및 설정 가이드 상세화